<resources>
    <string name="app_name" translatable="true">Extend Your Life</string>

    <string name="quote" translatable="false">“Money does not buy you freedom. Time does.”</string>

    <string name="from_badge" translatable="true">INFLUENCE TODAY</string>
    <string name="to_badge" translatable="true">INFLUENCE THIS WEEK</string>
    <string name="delivery_date_badge" translatable="true">WHOLE TIME SPAN</string>
    <string name="deadline_badge" translatable="true">IN HOURS</string>

    <string name="minutes" translatable="true">minutes</string>
    <string name="hours" translatable="true">hours</string>
    <string name="years" translatable="true">years</string>
    <string name="yesterday" translatable="true">yesterday</string>
    <string name="won_time" translatable="true">hours won</string>
    <string name="won_years" translatable="true">years won</string>
    <string name="in_hours" translatable="true">In minutes:</string>
    <string name="avg_minutes" translatable="true">Daily average:</string>
    <string name="week" translatable="true">week</string>

    <string name="added_time" translatable="true">Won time</string>
    <string name="lost_time" translatable="true">Lost time</string>
    <string name="share" translatable="true">Share</string>
    <string name="share_progress" translatable="true">Share your progress with your friends</string>
    <string name="share_stats" translatable="true">Share your stats with your friends</string>
    <string name="request_btn_text" translatable="true">CLOSE</string>
    <string name="understood" translatable="true">Understood</string>
    <string name="influence" translatable="true">Influence</string>
    <string name="frequency" translatable="true">Frequency</string>
    <string name="my_life_expectancy" translatable="true">My life expectancy</string>
    <string name="share_text1" translatable="true">I have extended my life expectancy:</string>
    <string name="share_text2" translatable="true">Go try it on your own:</string>
    <string name="share_text3" translatable="true">My new life expectancy:</string>
    <string name="last_time" translatable="true">LAST TIME</string>
    <string name="never" translatable="true">never</string>
    <string name="beginning_le" translatable="true">Previous life expectancy</string>
    <string name="possible_le" translatable="true">Achievable life expectancy</string>
    <string name="today" translatable="true">TODAY</string>

    <string name="intro1" translatable="true">Your won hours will be displayed here. Click it for more information on your progress and life expectancy.</string>
    <string name="intro2" translatable="true">Click on one of these categories to track your daily behavior and how it affects your life expectancy.</string>
    <string name="intro3" translatable="true">This graph shows how many hours you have won in the last 5 days.</string>
    <string name="intro4" translatable="true">Swipe right to access settings, privacy policy, and more.</string>

    <string name="outside" translatable="true">Going outside</string> <string name="mood" translatable="true">Today\'s Mood</string>
    <string name="edit_user_data_instruction" translatable="true">Please rate the following activities by their importance in your life (5 = important)</string>
    <string name="yearOfBirth" translatable="true">Please enter your year of birth</string>
    <string name="sport" translatable="true">Sport</string>
    <string name="smoking" translatable="true">Smoking</string>
    <string name="nutrition" translatable="true">Nutrition</string>
    <string name="height" translatable="true">Height (cm)</string>
    <string name="weight" translatable="true">Weight (kg)</string>
    <string name="male" translatable="true">male</string>
    <string name="female" translatable="true">female</string>
    <string name="countries" translatable="true">countries</string>
    <string name="lifeexpectency" translatable="true">Life expectancy:</string>
    <string name="no_gender_country" translatable="true">Please enter your gender and country</string>

    <string name="smoking_today" translatable="true">How much did you smoke?</string>
    <string name="sport_today" translatable="true">How much sport did you do today?</string>
    <string name="nutrition_today" translatable="true">How healthy have you eaten today?</string>
    <string name="going_outside_today" translatable="true">How much time did you spend outside?</string>
    <string name="mood_today" translatable="true">How was your overall mood today?</string>

    // Option View
    <string name="licenses" translatable="true">Licenses</string>
    <string name="privacy_policy" translatable="true">Privacy policy</string>
    <string name="settings" translatable="true">Settings</string>
    <string name="feedback" translatable="true">Feedback</string>
    <string name="contact" translatable="true">Contact</string>
    <string name="about" translatable="true">About</string>
    <string name="licenses_text" translatable="true">
        Images:\n
        pexels.com\n
\n
        Icons:\n
        material.io\n
        icons8.com\n
        flaticon.com\n
\n
        Icon-Designers:\n
        -Freepik\n
\n
        Studies:\n
        https://data.worldbank.org/indicator/SP.DYN.LE00.IN\n\n
        https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(12)61720-6/fulltext\n\n
        https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4032609/\n\n
        https://www.ncbi.nlm.nih.gov/pubmed/10192312\n\n
        https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3680555/\n\n
        https://www.reuters.com/article/us-health-elderly-goingout-longevity/leaving-the-house-linked-to-longevity-in-older-adults-idUSKBN1EK19N\n\n

    </string>
    <string name="about_text" translatable="true">
        Developed by Felix Hoppe
        \n
        \n
        Disclaimer:\n
        \n
        The data in this app that relates to your life expectancy is based solely on statistics, so that only averages can be formed.
        Your actual life expectancy depends on many circumstances that can not be handled in this app.
        The statistics are based on scientific studies that cover the impact of the activities mentioned in the app on life expectancy.
        The studies used in this app are listed in the licenses.
        I assume no liability for the accuracy, completeness and timeliness of the data.
        All claims for damages in connection with decisions and actions resulting from this app
        are also excluded.
        \n
    </string>


    <string name="like_my_app" translatable="true">Is my app helpful?</string>
    <string name="rate_text" translatable="true">If my app helps you in everyday life, please take a moment to rate it.\n
        It helps me a lot spreading this app so that other people can benefit from it too.\n
        Thanks for your support!</string>
    <string name="rate" translatable="true">Rate</string>
    <string name="like" translatable="true">I like your App</string>
    <string name="remind" translatable="true">Remind me later</string>
    <string name="no_thanks" translatable="true">No, thanks</string>

    // Slider Bubble Text
    <string name="very_low" translatable="true">very low</string>
    <string name="low" translatable="true">low</string>
    <string name="medium" translatable="true">medium</string>
    <string name="high" translatable="true">high</string>
    <string name="very_high" translatable="true">very high</string>

    <string name="back_pressed" translatable="true">Press again to exit</string>

    // App Intro
    <string name="goals" translatable="true">Goals</string>
    <string name="statistics" translatable="true">Statistics</string>
    <string name="diet" translatable="true">Improve your health</string>
    <string name="obstacles" translatable="true">Overcome obstacles</string>
    <string name="future" translatable="true">Future</string>

    <string name="goals_desc" translatable="true">The easiest way to accomplish your goals!\nBy showing you how some behaviors affect your lifespan drasticly, your willing to make changes more easily.</string>
    <string name="statistics_desc" translatable="true">Stay motivated by keeping track of your progress.</string>
    <string name="diet_desc" translatable="true">Reach your optimal shape by exercising more and eating healthier.</string>
    <string name="obstacles_desc" translatable="true">This App helps you accomplish your biggest obstacles. All to help you become the best version of yourself.</string>
    <string name="future_desc" translatable="true">Live a longer, healthier and happier life.</string>
</resources>