<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">


    <com.ramotion.fluidslider.FluidSlider
        android:id="@+id/yearFluidSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:elevation="2dp"
        app:duration="@android:integer/config_mediumAnimTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:size="small"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="bottom"
        android:text="@string/yearOfBirth"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/yearFluidSlider"
        app:layout_constraintEnd_toEndOf="@+id/yearFluidSlider"
        app:layout_constraintStart_toStartOf="@+id/yearFluidSlider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.ramotion.fluidslider.FluidSlider
        android:id="@+id/sportFluidSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:elevation="2dp"
        app:duration="@android:integer/config_mediumAnimTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27999997"
        app:size="small"
        tools:targetApi="lollipop" />


    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="0dp"
        android:layout_height="169dp"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:gravity="bottom"
        android:text="@string/edit_user_data_instruction"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/sportTextView"
        app:layout_constraintEnd_toEndOf="@+id/sportTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sportTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/sportTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="bottom"
        android:text="@string/sport"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/sportFluidSlider"
        app:layout_constraintEnd_toEndOf="@+id/sportFluidSlider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sportFluidSlider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <com.ramotion.fluidslider.FluidSlider
        android:id="@+id/smokingFluidSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:elevation="2dp"
        app:duration="@android:integer/config_mediumAnimTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002"
        app:size="small"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/smokingTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="bottom"
        android:text="@string/smoking"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/smokingFluidSlider"
        app:layout_constraintEnd_toEndOf="@+id/smokingFluidSlider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/smokingFluidSlider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <com.ramotion.fluidslider.FluidSlider
        android:id="@+id/nutritionFluidSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:elevation="2dp"
        app:duration="@android:integer/config_mediumAnimTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        app:size="small"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/nutritionTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="bottom"
        android:text="@string/nutrition"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/nutritionFluidSlider"
        app:layout_constraintEnd_toEndOf="@+id/nutritionFluidSlider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nutritionFluidSlider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <com.ramotion.fluidslider.FluidSlider
        android:id="@+id/heightFluidSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:elevation="2dp"
        app:duration="@android:integer/config_mediumAnimTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:size="small"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="bottom"
        android:text="@string/height"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/heightFluidSlider"
        app:layout_constraintEnd_toEndOf="@+id/heightFluidSlider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/heightFluidSlider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <com.ramotion.fluidslider.FluidSlider
        android:id="@+id/weightFluidSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:elevation="2dp"
        app:duration="@android:integer/config_mediumAnimTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003"
        app:size="small"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="bottom"
        android:text="@string/weight"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/weightFluidSlider"
        app:layout_constraintEnd_toEndOf="@+id/weightFluidSlider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/weightFluidSlider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <yanzhikai.textpath.SyncTextPathView
        android:id="@+id/edit_user_data_stpv"
        android:layout_width="111dp"
        android:layout_height="67dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/weightFluidSlider"
        app:layout_constraintVertical_bias="0.0"
        app:showPainter="true"
        app:textInCenter="true"
        app:textSize="45sp" />

    <RadioButton
        android:id="@+id/maleRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/male"
        app:layout_constraintBottom_toBottomOf="@+id/yearTextView"
        app:layout_constraintEnd_toEndOf="@+id/yearTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <RadioButton
        android:id="@+id/femaleRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="8dp"
        android:text="@string/female"
        app:layout_constraintBottom_toBottomOf="@+id/yearTextView"
        app:layout_constraintStart_toStartOf="@+id/yearTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:prompt="@string/countries"
        app:layout_constraintBottom_toBottomOf="@+id/yearTextView"
        app:layout_constraintEnd_toStartOf="@+id/femaleRB"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/yearTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="160dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/lifeexpectency"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightFluidSlider"
        app:layout_constraintVertical_bias="0.757" />

    <ImageButton
        android:id="@+id/img_btn_next"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleX="1.6"
        android:scaleY="1.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toEndOf="@+id/edit_user_data_stpv"
        app:layout_constraintTop_toBottomOf="@+id/weightFluidSlider"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_send" />


</android.support.constraint.ConstraintLayout>